# hsbot

./: Config.hs  Hsbot.hs  LICENSE  Main.hs  Makefile  README  README.markdown  TODO  hsbot.cabal
Hsbot/: Command.hs  Config.hs  Core.hs  IRC.hs  IRCParser.hs  IRCPlugin.hs  Main.hs  Message.hs  Plugin.hs  Types.hs  Utils.hs
Hsbot/Irc/: Command.hs  Config.hs  Core.hs  Message.hs  Plugin.hs  PluginCommons.hs  Types.hs
Hsbot/Irc/Plugin/: Core.hs  Dummy.hs  Ping.hs  Quote.hs  Utils.hs
Hsbot/Plugin/: Admin.hs  Duck.hs  Ping.hs  Quote.hs
HsbotIrcBot/: .gitignore  Main.hs  hsbot-irc.cabal
HsbotIrcBot/Hsbot/Irc/: CLI.hs  Command.hs  Config.hs  Core.hs  Message.hs  Plugin.hs  Server.hs  Types.hs
HsbotIrcBot/Hsbot/Irc/Plugin/: Core.hs  Dummy.hs  Ping.hs  Quote.hs
HsbotMaster/: LICENSE  Main.hs  hsbot.cabal
HsbotMaster/Hsbot/: Core.hs  Message.hs  Plugin.hs  PluginUtils.hs  Types.hs
Plugins/: Core.hs  Ping.hs  Quote.hs
doc/: rfc2812.txt
