Name:               hsbot
Version:            0.4.12
Cabal-version:      >=1.2
Synopsis:           A multipurposes IRC bot
Description:
  hsbot is a multi-purpose bot, written slowly, as long as I learned more
  haskell. It features IRC integration and some plugins. I tried to design
  a bot architecture as modular and as flexible as possible.
Homepage:           http://hsbot.adyxax.org/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux
Maintainer:         judessaux@gmail.com
Copyright:          Copyright (c) 2010 Julien Dessaux
Category:           Hsbot
Build-type:         Simple


Library
  ghc-options: -Wall
  exposed-modules:  Hsbot
                    Hsbot.Config
                    Hsbot.Core
                    Hsbot.Message
                    Hsbot.Plugin
                    Hsbot.Plugin.Duck
                    Hsbot.Plugin.Ping
                    Hsbot.Types
                    Hsbot.Utils
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5,
                    bytestring,
                    certificate,
                    containers,
                    crypto-api,
                    cryptocipher,
                    dyre,
                    hslogger,
                    irc,
                    mtl,
                    network,
                    random,
                    tls >= 0.6.1,
                    tls-extra >= 0.2.0


Executable hsbot
  Main-is:          Main.hs
  Ghc-options:      -Wall
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5

