Name:               hsbot
Version:            0.3
Cabal-version:      >=1.2
Synopsis:           A multi-purposes bot.
Description:
  hsbot is a multi-purpose bot, written slowly, as long as I learned more
  haskell. It features IRC integration and some plugins. I tried to design
  a bot architecture as modular and as flexible as possible.
Homepage:           http://hsbot.adyxax.org/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux
Maintainer:         judessaux@gmail.com
Copyright:          Copyright (c) 2010 Julien Dessaux
Category:           Hsbot
Build-type:         Simple


Executable hsbot
  Main-is:          Main.hs
  Ghc-options:      -Wall
  Extensions:       DeriveDataTypeable ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5

Library
  Ghc-options:      -Wall
  Extensions:       DeriveDataTypeable ScopedTypeVariables
  Exposed-modules:  Hsbot.Message,
                    Hsbot.Types
  Build-depends:    base >= 4.1 && < 5,
                    containers >= 0.3,
                    mtl >= 1.1,
                    time >= 1.1

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

